--- a/c03/window-object.html
+++ b/c03/window-object.html
@@ -7,6 +7,13 @@
   <body>
     <h1>TravelWorthy</h1>
     <div id="info"></div>
+    <dialog open>
+      <p>Greetings,one and all!
+        <form method = "dialog">
+          <button>OK</button>
+        </form>
+      </p>
+    </dialog>
     <script src="js/window-object.js"></script>
   </body>
 </html>
