--- a/c06/event-listener-with-parameters.html
+++ b/c06/event-listener-with-parameters.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>JavaScript &amp; jQuery - Chapter 6: Events - Event listener with parameters</title>
-    <link rel="stylesheet" href="css/c06.css" />
-  </head>
-  <body>
-    <div id="page">
-      <h1>List King</h1>
-      <h2>New Account</h2>
-      <form method="post" action="http://www.example.org/register">
+//event listener with parameters
+// document.getElementById('username').addEventListener('keyup', function(event){
+//     console.log(event.target.value)
+// }
+/*
+function checkUsername(event){
+    let feedbackElement = document.getElementById('feedback')    
+    let username = event.target.value
+    if(username.length < 5){
+        feedbackElement.textContent = "使用者的名稱必需大於5個字元"
+    }else{
+        feedbackElement.textContent =  ""
+    }
+}
+document.getElementById('username').addEventListener('blur', checkUsername, false);
+*/
 
-        <label for="username">Create a username: </label>
-        <input type="text" id="username" /><div id="feedback"></div>
-
-        <label for="password">Create a password: </label>
-        <input type="password" id="password" />
-
-        <input type="submit" value="sign up" />
-
-      </form>
-    <div>
-    <script src="js/event-listener-with-parameters.js"></script>
-  </body>
-</html>
+document.getElementById('username').addEventListener('blur', function(event){
+    let feedbackElement = document.getElementById('feedback')
+    let username_string = event.target.value
+    console.log(username)
+    if(username_string.length < 5){
+        feedbackElement.textContent = "使用者的名綱必需大新5個字元"
+    }else{
+        feedbackElement.textContent =  ""
+    }
+}, false);
