--- a/ajax/lesson1.html
+++ b/ajax/lesson1.html
@@ -10,11 +10,13 @@
     <form method="post">
         <fieldset>
             <legend>行政區</legend>
-            <select id='sarea'>
+            <select id='sarea' autofocus>
                 
             </select>
         </fieldset>
     </form>
+
+    <h2 id = "areaName"></h2>
     
 <script src="js/lesson1.js"></script>
 </body>
