--- a/ajax/lesson1.html
+++ b/ajax/lesson1.html
@@ -38,23 +38,23 @@
                 <td>28</td>
                 <td>2</td>
                 <td>25</td>
+                <td>時間</td>
                 <td>營業中</td>
-                <td><a href = "#">更多</a></td>
+                <td><a href="#">更多</a></td>
             </tr>
         </tbody>
     </table>
 
-    <dialog id="close">
+    <dialog id="dialog">
         <p>網頁正在維護中....</p>
         <form method="dialog">
             <button>OK</button>
         </form>
     </dialog>
 
-    <div class = "overlay">
+    <div class="close">
         這是新的訊息
     </div>
-
     
     
 <script src="js/lesson1.js"></script>
