--- a/ajax/lesson1.html
+++ b/ajax/lesson1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" />
     <title>Document</title>
 </head>
 <body>
@@ -52,11 +53,12 @@
         </form>
     </dialog>
 
-    <div class="close" id="map">
-        <input type = "button" value = "離開" id = "exit">
+    <div class="close" id="map">  
+        <input type="button" value="離開" id="exit">
     </div>
     
-    
+<script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script>  
 <script src="js/lesson1.js"></script>
+
 </body>
 </html>
