--- a/product/public/index.html
+++ b/product/public/index.html
@@ -12,9 +12,15 @@
 <body>
   <div id="container">
     <header class="header">
-      <h1>產品輸入</h1>
-    </header>
-    <nav class="nav">navigation</nav>
+      <h1>產品輸入</h1>      
+    </header>  
+    <nav class="nav">      
+        <ul>
+          <li><a>產品輸入</a></li>
+          <li><a>產品更新</a></li>
+          <li><a>產品導覽</a></li>
+        </ul>
+      </nav>
     <main class="main">Main</main>
     <footer class="footer">
       <h1>Footer</h1>
