--- a/product/public/index.html
+++ b/product/public/index.html
@@ -5,22 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>產品</title>
-  <link rel="stylesheet" href = "css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js" type="module"></script>
 </head>
 <body>
   <div id="container">
     <header class="header">
-      <h1>產品輸入</h1>      
-    </header>  
-    <nav class="nav">      
-        <ul>
-          <li><a>產品輸入</a></li>
-          <li><a>產品更新</a></li>
-          <li><a>產品導覽</a></li>
-        </ul>
-      </nav>
+      <h1>產品輸入</h1>
+    </header>
+    <nav class="nav">
+      <ul>
+        <li><a href="#">產品輸入</a></li>
+        <li><a href="#">產品更新</a></li>
+        <li><a href="#">產品導覽</a></li>
+      </ul>
+    </nav>
     <main class="main">Main</main>
     <footer class="footer">
       <h1>Footer</h1>
