--- a/product/public/index.html
+++ b/product/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js" type="module"></script>
 </head>
+
 <body>
   <div id="container">
     <header class="header">
@@ -24,17 +26,41 @@
     <main class="main">
       <form>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <label for="inputName" class="form-label">產品名稱</label>
+          <input type="text" class="form-control" id="inputName" aria-describedby="nameHelp">
+          <div id="nameHelp" class="form-text">產品名稱要詳細</div>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <label for="InputCode1" class="form-label">產品編號</label>
+          <input type="text" class="form-control" id="InputCode1" aria-describedby="codeHelp">
+          <div id="codeHelp" class="form-text">xxx-xxx-xxx</div>
         </div>
+        
+        <p>類別</p>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="inlineCheckbox1" value="生鮮">
+          <label class="form-check-label" for="inlineCheckbox1">生鮮</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="inlineCheckbox2" value="熟食">
+          <label class="form-check-label" for="inlineCheckbox2">熟食</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="inlineCheckbox3" value="烘烤">
+          <label class="form-check-label" for="inlineCheckbox3">烘烤</label>
+        </div>
+
+        <p style = "margin-top:1em">保固需求</p>
         <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          <input type="radio" class="form-check-input" id="warrantyCheck1">
+          <label class="form-check-label" for="warrantyCheck1">保固</label>
+        </div>
+
+        <div class="mb-3 form-check" style="margin-top:5em;">
+          <label class="form-check-label" for="warrantyDate">保存期限</label>
+          <input type="date" class="form-check-input" id="warrantyDate">          
+        </div>
+
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
@@ -42,6 +68,7 @@
     <footer class="footer">
       <h1>Footer</h1>
     </footer>
-  </div>  
+  </div>
 </body>
+
 </html>
