--- a/product/public/index.html
+++ b/product/public/index.html
@@ -24,18 +24,19 @@
       </ul>
     </nav>
     <main class="main">
-      <form>
+      <form id="form" method="post" action="">
         <div class="mb-3">
           <label for="inputName" class="form-label">產品名稱</label>
           <input type="text" class="form-control" id="inputName" aria-describedby="nameHelp">
           <div id="nameHelp" class="form-text">產品名稱要詳細</div>
+          <p class="alert close">*格式不符合</p>
         </div>
         <div class="mb-3">
           <label for="InputCode1" class="form-label">產品編號</label>
           <input type="text" class="form-control" id="InputCode1" aria-describedby="codeHelp">
           <div id="codeHelp" class="form-text">xxx-xxx-xxx</div>
         </div>
-        
+
         <p>類別</p>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" id="inlineCheckbox1" value="生鮮">
@@ -50,7 +51,7 @@
           <label class="form-check-label" for="inlineCheckbox3">烘烤</label>
         </div>
 
-        <p style = "margin-top:1em">保固需求</p>
+        <p style="margin-top:1em">保固需求</p>
         <div class="mb-3 form-check">
           <input type="radio" class="form-check-input" id="warrantyCheck1">
           <label class="form-check-label" for="warrantyCheck1">保固</label>
@@ -58,17 +59,20 @@
 
         <div class="mb-3 form-check" style="margin-top:5em;">
           <label class="form-check-label" for="warrantyDate">保存期限</label>
-          <input type="date" class="form-check-input" id="warrantyDate">          
+          <input type="date" class="form-check-input" id="warrantyDate">
         </div>
 
+        <div>
+          <button type="submit" class="btn btn-primary">送出</button>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </main>
-    <footer class="footer">
-      <h1>Footer</h1>
-    </footer>
-  </div>
+
+</body>
+</form>
+</main>
+<footer class="footer">
+  <h1>Footer</h1>
+</footer>
+</div>
 </body>
 
 </html>
