--- a/product/public/stock.html
+++ b/product/public/stock.html
@@ -10,23 +10,26 @@
     <link rel="stylesheet" href="css/index.css">
     <script type="module">
         let selectedElement = document.querySelector("#stockSelect")
-         fetch(new Request('codeSearch.json'))
-        .then((response)=>{
-            return response.json()
-        }).then((r)=>{
-           r.forEach(element)=>{
-            let name = element.name
-            let code = element.code
-            let stockName = `{code}-{name}`
-            let optionElement = document.createElement(option)
+        fetch(new Request('codeSearch.json'))
+            .then((response) => {
+                return response.json()
+            }).then((r) => {
+                r.forEach(element => {
+                    let name = element.name
+                    let code = element.code
+                    let stockName = `${code}-${name}`
+                    let optionElement = document.createElement("option")
+                    optionElement.value = code
+                    optionElement.innerText = stockName
+                    selectedElement.appendChild(optionElement)
 
-           }
-        })
-        
-        let optionElement = document.createElement("option")
-        optionElement.value = "abc"
-        optionElement.innerText="abc"
-        selectedElement.appendChild(optionElement)
+                });
+            })
+
+        //let optionElement = document.createElement("option")
+        //optionElement.value = "abc"
+        //optionElement.innerText="abc"
+        //selectedElement.appendChild(optionElement)
 
     </script>
 </head>
@@ -44,12 +47,10 @@
             </ul>
         </nav>
         <main class="main">
-            <select id = "stockSelect" class="form-select" aria-label="Default select example">
+            <select id="stockSelect" class="form-select" aria-label="Default select example">
                 <option selected>請選股票名稱</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
+
+            </select>
         </main>
         <footer class="footer">
             <h1>Footer</h1>
