--- a/product/public/stock.html
+++ b/product/public/stock.html
@@ -8,28 +8,8 @@
     <title>產品</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <script type="module">
-        let selectedElement = document.querySelector("#stockSelect")
-        fetch(new Request('codeSearch.json'))
-            .then((response) => {
-                return response.json()
-            }).then((r) => {
-                r.forEach(element => {
-                    let name = element.name
-                    let code = element.code
-                    let stockName = `${code}-${name}`
-                    let optionElement = document.createElement("option")
-                    optionElement.value = code
-                    optionElement.innerText = stockName
-                    selectedElement.appendChild(optionElement)
-
-                });
-            })
-
-        //let optionElement = document.createElement("option")
-        //optionElement.value = "abc"
-        //optionElement.innerText="abc"
-        //selectedElement.appendChild(optionElement)
+    <script  type="module" src = "js/stock.js">
+       
 
     </script>
 </head>
@@ -47,10 +27,19 @@
             </ul>
         </nav>
         <main class="main">
-            <select id="stockSelect" class="form-select" aria-label="Default select example">
-                <option selected>請選股票名稱</option>
+            <form action="" method="post">
+                <div class="input-group mb-3">
+                    <select id="stockSelect" class="form-select" aria-label="Default select example">
+                        <option selected>請選股票名稱</option>
+                    </select>
+                </div>
 
-            </select>
+                <div class="input-group mb-3">
+                    <label class="input-group-text" for="inputGroupFile02">請選擇年月</label>
+                    <input type="month" class="form-control" id="inputGroupFile02" min="2000-01">
+                </div>
+                    <button class="btn btn-outline-secondary" type="submit">送出</button>
+            </form>
         </main>
         <footer class="footer">
             <h1>Footer</h1>
